corrected spacing around headings on featured components and whatson headings

--- a/assets/sass/partials/_components.scss
+++ b/assets/sass/partials/_components.scss
@@ -7,7 +7,7 @@
   @include clearfix;
   margin-top: $section-margin-top;
   h2 {
-    margin: 0 $margin $margin;
+    margin: 0 $margin $margin*0.75 $margin;
   }
 
 }
