--- a/assets/sass/partials/_variables.scss
+++ b/assets/sass/partials/_variables.scss
@@ -1,6 +1,6 @@
 $margin: 20px;
 $padding: 20px;
-$section-margin-top: 80px;
+$section-margin-top: 60px;
 $letter-spacing: -.02em;
 
 // Colours
